# open-source-contribution-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
osc_agent/: __init__.py  agent_loop.py  cli.py  config.py
osc_agent/harness/: __init__.py  background.py  capabilities.py  command.py  compact.py  contracts.py  contribution_workflow.py  cron.py  gates.py  hooks.py  loop_state.py  mcp.py  memory.py  permissions.py  progress.py  prompt.py  protocols.py  recovery.py  repository_boundary.py  risk.py  runtime_state.py  stage_agents.py  subagent.py  tasks.py  teams.py  todo.py  tool_execution.py  tool_registry.py  trace.py  worktree.py
osc_agent/skills/: __init__.py  registry.py
osc_agent/skills/docs/: SKILL.md
osc_agent/tools/: files.py  git.py  github.py  pr.py  repo.py  shell.py  task.py
osc_agent/workflows/: __init__.py
tests/: stage_llm_fakes.py  test_agent_loop.py  test_autonomous.py  test_background.py  test_cli.py  test_command.py  test_compact.py  test_config.py  test_contribute_cli.py  test_contribution_models.py  test_contribution_prompts.py  test_contribution_workflow.py  test_cron.py  test_file_tools.py  test_gates.py  test_git_tools.py  test_github_tools.py  test_live_model.py  test_mcp.py  test_memory.py  test_permissions.py  test_pr_draft.py  test_progress.py  test_prompt.py  test_protocols.py  test_recovery.py  test_repo_analysis.py  test_runtime_state.py  test_shell.py  test_skills.py  test_stage_agents.py  test_subagent.py  test_tasks.py  test_teams.py  test_todo.py  test_tool_registry.py  test_trace.py  test_worktree.py
(+17 files in other folders)
