[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-source-contribution-agent"
version = "0.1.0"
description = "A local CLI harness for open source contribution agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.25.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
]

[project.scripts]
osc-agent = "osc_agent.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".pytest-cache-temp"
